# pyfit

./: pyproject.toml
pyfit/: __init__.py  dependencies.py  example.txt  pyfit.py
